--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,10 @@ DEEPSEEK_API_KEY=your_deepseek_api_key_here
 # 从 https://platform.openai.com/ 获取您的API密钥
 OPENAI_API_KEY=your_openai_api_key_here
 
+# DashScope（阿里云百炼）API密钥
+# 从 https://dashscope.aliyuncs.com/ 获取您的API密钥
+DASHSCOPE_API_KEY=your_dashscope_api_key_here
+
 # 可选配置
 # 默认模型
 # DEFAULT_MODEL=qwen-3-235b-a22b-thinking-2507
