--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,10 @@ OPENAI_API_KEY=your_openai_api_key_here
 # 从 https://dashscope.aliyuncs.com/ 获取您的API密钥
 DASHSCOPE_API_KEY=your_dashscope_api_key_here
 
+# Kimi（月之暗面）API密钥
+# 从 https://platform.moonshot.cn/ 获取您的API密钥
+KIMI_API_KEY=your_kimi_api_key_here
+
 # 可选配置
 # 默认模型
 # DEFAULT_MODEL=qwen-3-235b-a22b-thinking-2507
