--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-```gitignore
 # Compiled and build artifacts
 *.pyc
 __pycache__/
@@ -32,4 +31,10 @@ htmlcov/
 # Testing
 .pytest_cache/
 .mypy_cache/
-```
+
+# UV package manager
+.python-version
+uv.lock
+
+# Ruff cache
+.ruff_cache/
