--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ venv/
 node_modules/
 
 # Logs and temp files
+logs/
 *.log
 *.tmp
 *.swp
@@ -22,6 +23,7 @@ node_modules/
 # Editors
 .vscode/
 .idea/
+.claude
 
 # Coverage reports
 .coverage
